# short_link_api

./: Cargo.toml  README.md  Rocket.toml  deploy.sh  ec-private.pem  localhost.crt  localhost.key  readme.md
migrations/2022-12-17-192711_initial_migration/: up.sql
migrations/2022-12-18-130309_user/: up.sql
migrations/2022-12-21-195322_add_user_roles/: up.sql
migrations/2022-12-21-200507_change_column_types_roles/: up.sql
migrations/2022-12-27-140539_create_links/: up.sql
migrations/2022-12-27-141804_addUserIdOnLinks/: up.sql
migrations/2022-12-27-141945_columnsOnLinks/: up.sql
migrations/2022-12-27-163431_idAi/: up.sql
migrations/2022-12-27-205841_rollback/: up.sql
migrations/2022-12-27-210017_rollback2/: up.sql
migrations/2022-12-27-211842_adduserid/: up.sql
migrations/2022-12-27-212728_addcreated_at/: up.sql
migrations/2022-12-27-213652_deleted/: up.sql
migrations/2022-12-27-214244_deleted_at/: up.sql
migrations/2022-12-27-214711_user_extension/: up.sql
migrations/2022-12-28-143753_brand/: up.sql
migrations/2022-12-28-144042_brand-id/: up.sql
migrations/2022-12-28-144803_brand-id/: up.sql
migrations/2022-12-28-150337_keyuser/: up.sql
migrations/2022-12-28-150608_linkuser/: up.sql
migrations/2022-12-28-152012_populateBrand/: up.sql
migrations/2022-12-28-153554_linkView/: up.sql
migrations/2022-12-28-153835_linkkey/: up.sql
migrations/2022-12-29-140427_addlinklabel/: up.sql
migrations/2022-12-29-192710_nbClick/: up.sql
src/: main.rs  schema.rs
src/controllers/: mod.rs
src/dto/: mod.rs
templates/: notfound.html.tera
(+36 files in other folders)
