[package]
name = "short_link_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
diesel = { version = "2.0.0", features = ["mysql" , "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.13.0"
jsonwebtoken = "8.2.0"
chrono = {version = "0.4.0", features = ["serde"]}
utoipa = {version = "2", features = ["rocket_extras"] }
utoipa-swagger-ui = {version = "3",  features = ["rocket"]}
rand = "0.8.5"
